# python-chess-engine

./: .gitignore  PythonChess.spec  README.md  engine.bat  model.pt  pyproject.toml
src/chess_project/api/: main.py
src/chess_project/core/: attacks.py  position.py  rules.py  types.py
src/chess_project/db/: models.py
src/chess_project/engine/: __init__.py  evaluator.py  interfaces.py  ml_evaluator.py  ordering.py  search.py
src/chess_project/io/: fen.py  notation.py  pgn.py  uci.py
src/chess_project/ui/: cli.py  gui.py
tests/: test_fen.py  test_perft.py  test_position.py  test_types.py
