[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-project"
version = "0.1.0"
description = "A hand-coded Python chess engine"
requires-python = ">=3.11"
dependencies = ["pygame>=2.5"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
